--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -1,38 +1,70 @@
+.shopcategory-banner{
+    display: block;
+    margin: 30px auto;
+    width: 80%;
+}
+.shopcategory-indexSort{
+    display: flex;
+    margin: 0px 170px;
+    justify-content: space-between;
+    align-items: center;
+}
+.shopcategory-sort{
+    padding: 10px 20px;
+    border-radius: 40px;
+    border: 1px solid #888;
+}
+.shopcategory-indexSort p span{
+    font-weight: 600;
+}
+.shopcategory-products{
+    width: 90%;
+    max-width: 1360px;
+    justify-content: center;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    
+}
+.shopcategory-loadmore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px auto;
+    width: 200px;
+    height: 60px;
+    border-radius: 75px;
+    background: #ededed;
+    color: #787878;
+    font-size: 16px;
+    font-weight: 500;
+}
+@media (max-width:1280px) {
     .shopcategory-banner{
-        display: block;
-        margin: 30px auto;
-        width: 82%;
+        margin: 20px auto;
+        width: 90%;
     }
     .shopcategory-indexSort{
-        display: flex;
-        margin: 0 170px;
-        justify-content: space-between;
-        align-items: center;
+        width: 90%;
+       margin: auto;
     }
     .shopcategory-sort{
-        padding: 10px 20px;
-        border-radius: 40px;
-        border: 1px solid #888;
+        padding: 5px 10px;
+        font-size: 12px;
     }
-    .shopcategory-indexSort p span{
-        font-weight: 600;
+    .shopcategory-indexSort p{
+        font-size: 12px;
     }
-    .shopcategory-products{
-        margin: 20px 170px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        row-gap: 80px;
+}
+@media (max-width:800px) {
+    .shopcategory-banner{
+        width: 95%;
     }
-    .shopcategory-loadmore{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 150px auto;
-        width: 233px;
-        height: 69px;
-        border-radius: 75px;
-        background: #ededed;
-        color: #787878;
-        font-size: 18px;
-        font-weight: 500;
+     .shopcategory-loadmore{
+        margin: 60px auto;
+        width: 150px;
+        height: 40px;
+        font-size: 13px;
     }
+}
