--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
 }
 .nav-logo p{
     color: #171717;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 600;
 }
 .nav-menu{
@@ -23,8 +23,8 @@
     align-items: center;
     list-style: none;
     gap: 40px;
-    color: #626262;
-    font-size: 16px;
+    color: #000000;
+    font-size: 18px;
     font-weight: 500;
 }
 
@@ -41,7 +41,7 @@
     width: 80%;
     height: 3px;
     border-radius: 10px;
-    background: #FF4141;
+    background: #12771f;
 }
 .nav-login-cart{
     display: flex;
@@ -55,10 +55,10 @@
     outline: none;
     border: 1px solid #7a7a7a;
     border-radius: 75px;
-    color: #515151;
+    color: #ffffff;
     font-size: 16px;
     font-weight: 500;
-    background: white;
+    background: rgb(0, 0, 0);
     cursor: pointer;
 }
 .nav-login-cart button:active{
