--- a/frontend/src/Components/CartItems/CartItems.css
+++ b/frontend/src/Components/CartItems/CartItems.css
@@ -56,7 +56,7 @@
     height: 50px;
     outline: none;
     border: none;
-    background: #ff5a5a;
+    background: #6ec075;
     color: #fff;
     font-size: 14px;
     font-weight: 600;
