--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero{
     min-height: 90vh;
-    background:  linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
+    background: linear-gradient(180deg, #7fda86 0%, #e1ffea22 60%);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -36,7 +36,7 @@
     height: 50px;
     border-radius: 75px;
     margin-top: 20px;
-    background: #ff4141;
+    background: #df5353;
     color: white;
     font-size: 15px;
     font-weight: 500;
