Resolved frontend image

--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -36,7 +36,7 @@
     height: 50px;
     border-radius: 75px;
     margin-top: 20px;
-    background: #df5353;
+    background: #000000;
     color: white;
     font-size: 15px;
     font-weight: 500;
