--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -24,7 +24,7 @@
     width: 200px;
     height: 50px;
     border-radius: 35px;
-    background: #ff4141;
+    background: #000000;
     border: none;
     color: white;
     font-size: 16px;
