--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -66,7 +66,7 @@
 }
 .productdisplay-right-sizes div{
     padding: 16px 20px;
-    background: #fbfbfb;
+    background: #dbd5d5;
     border: 1px solid #ebebeb;
     border-radius: 3px;
     cursor: pointer;
@@ -77,7 +77,7 @@
     font-size: 16px;
     font-weight: 600;
     color: white;
-    background: #FF4141;
+    background: #6ec075;
     margin-bottom: 25px;
     border: none;
     outline: none;
